--- a/DemoApps/app/build.gradle
+++ b/DemoApps/app/build.gradle
@@ -2,20 +2,21 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "20.0.0"
-
+    buildToolsVersion '20.0.0'
     defaultConfig {
-        applicationId "appscotch.com.demoapps"
-        minSdkVersion 15
-        targetSdkVersion 20
+        applicationId 'appscotch.com.demoapps'
+        minSdkVersion 16
+        targetSdkVersion 16
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
